performance evaluate from 10 times up to 50 times

--- a/1_preprocessing/sound.ipynb
+++ b/1_preprocessing/sound.ipynb
@@ -12597,7 +12597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1529,
+   "execution_count": 1559,
    "metadata": {
     "collapsed": true
    },
@@ -12606,12 +12606,14 @@
     "from sklearn.metrics import average_precision_score\n",
     "from sklearn.metrics import recall_score\n",
     "from sklearn.metrics import f1_score\n",
-    "from sklearn.metrics import classification_report"
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import precision_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1530,
+   "execution_count": 1552,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12620,29 +12622,37 @@
     "    PREDICTS = []\n",
     "    PREDICTBIS = []\n",
     "    target_names = ['class 0', 'class 1']\n",
-    "#     PRECISIONS = []\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    for cl in cls:\n",
     "        print(cl.name)\n",
     "        testIndex = list(cl.test_index)\n",
+    "        LABEL_ = []\n",
+    "        PREDICT_ = []\n",
     "        for ele in testIndex:\n",
     "            if ele < 150:\n",
     "                LABELS.append(0)\n",
     "                PREDICTS.append(cl.classifier.predict_proba([baseData[ele]])[:,1])\n",
+    "                tmp = \n",
     "                PREDICTBIS.append(cl.classifier.predict([baseData[ele]])[0])\n",
-    "            else: \n",
+    "            else:\n",
     "                LABELS.append(1)\n",
     "                PREDICTS.append(cl.classifier.predict_proba([groupData[ele-150]])[:,1])\n",
     "                PREDICTBIS.append(cl.classifier.predict([groupData[ele-150]])[0])\n",
+    "            \n",
+    "            print(classification_report(LABELS, PREDICTBIS, target_names=target_names))\n",
     "    \n",
-    "    average_precision2 = average_precision_score(LABELS, PREDICTS)\n",
-    "    average_precision = average_precision_score(LABELS, PREDICTBIS)\n",
-    "    recall_multiclasses = recall_score(LABELS, PREDICTBIS)\n",
-    "    recall = recall_score(LABELS, PREDICTBIS, average=None)\n",
     "    \n",
-    "    f1_multiclasses = f1_score(LABELS, PREDICTBIS)\n",
-    "    f1 = f1_score(LABELS, PREDICTBIS, average=None)\n",
-    "#     print('LABELS: ', LABELS)\n",
-    "#     print('PREDICTBIS: ', PREDICTBIS)\n",
+    "#     average_precision2 = average_precision_score(LABELS, PREDICTS)\n",
+    "#     average_precision = average_precision_score(LABELS, PREDICTBIS)\n",
+    "#     recall_multiclasses = recall_score(LABELS, PREDICTBIS)\n",
+    "#     recall = recall_score(LABELS, PREDICTBIS, average=None)\n",
+    "#     f1_multiclasses = f1_score(LABELS, PREDICTBIS)\n",
+    "#     f1 = f1_score(LABELS, PREDICTBIS, average=None)\n",
+    "    \n",
+    "    print('LABELS: ', LABELS)\n",
+    "    print('PREDICTBIS: ', PREDICTBIS)\n",
     "    \n",
     "#     print('Avg Precision2: ', average_precision2)\n",
     "#     print('Avg Precision: ', average_precision)\n",
@@ -12651,7 +12661,88 @@
     "#     print('F1 Multicalsses: ', f1_multiclasses)\n",
     "#     print('F1: ', f1)\n",
     "    \n",
-    "    print(classification_report(LABELS, PREDICTBIS, target_names=target_names))\n"
+    "#     print(classification_report(LABELS, PREDICTBIS, target_names=target_names))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1555,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LABEL_TEST = [1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1]\n",
+    "PREDICT_TEST = [1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1567,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.66666666666666663"
+      ]
+     },
+     "execution_count": 1567,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision_score(LABEL_TEST[0:30], PREDICT_TEST[0:30])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1568,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 1568,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LABEL_TEST[0:30]"
    ]
   },
   {
@@ -13878,6 +13969,84 @@
     "getGroupTweetsLen(groupD3Text)\n",
     "getGroupTweetsLen(baseD3Text)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 50 次"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1698,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getRandomForestPerformance(baseFeatures, groupFeatures, storageName, fold=50):\n",
+    "    \n",
+    "    X = np.array(baseFeatures + groupFeatures)\n",
+    "    Y = np.array([0] * len(baseFeatures) + [1]*len(groupFeatures), dtype=int)\n",
+    "    sss = StratifiedShuffleSplit(Y, fold, random_state=randint(0,65536))\n",
+    "    classifier  = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
+    "    target_names = ['class 0', 'class 1']\n",
+    "    TOTAL_LABELS = []\n",
+    "    TOTAL_PREDICTS = []\n",
+    "    \n",
+    "    filename = '../Results/' + storageName\n",
+    "    with open(filename, 'w') as w:\n",
+    "        for train_index, test_index in sss:\n",
+    "            _PREDICTS = []  # Y_test: _LABELS\n",
+    "            X_train, X_test = X[train_index], X[test_index]\n",
+    "            Y_train, Y_test = Y[train_index], Y[test_index]\n",
+    "            classifier = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
+    "            classifier.fit(X_train, Y_train)\n",
+    "            _PREDICTS = classifier.predict(X_test)\n",
+    "            \n",
+    "            TOTAL_LABELS.extend(Y_test)\n",
+    "            TOTAL_PREDICTS.extend(_PREDICTS)\n",
+    "            \n",
+    "            accuracy = round(accuracy_score(Y_test, _PREDICTS), 2)\n",
+    "            crp = classification_report(Y_test, _PREDICTS, target_names=target_names)\n",
+    "            crp_pure = [ele for ele in crp.split('\\n')[3].split(' ') if ele != '']\n",
+    "            w.write('***{}***\\n{}\\n{}\\n{}\\n{}\\t{}\\t{}\\t{}\\n'.format(i, test_index, Y_test, _PREDICTS, accuracy, crp_pure[2], crp_pure[3], crp_pure[4]))\n",
+    "    \n",
+    "    print(classification_report(TOTAL_LABELS, TOTAL_PREDICTS, target_names=target_names))\n",
+    "    print('Avg. accuracy: ', round(accuracy_score(TOTAL_LABELS, TOTAL_PREDICTS), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1696,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.71      0.89      0.79        45\n",
+      "    class 1       0.85      0.64      0.73        45\n",
+      "\n",
+      "avg / total       0.78      0.77      0.76        90\n",
+      "\n",
+      "Accuracy:  0.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(debugStandardBaseD1Scores, debugStandardGroupD1Scores, 'debugStandardD1-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
