--- a/1_preprocessing/sound.ipynb
+++ b/1_preprocessing/sound.ipynb
@@ -13979,7 +13979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1698,
+   "execution_count": 1700,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13994,8 +13994,10 @@
     "    TOTAL_PREDICTS = []\n",
     "    \n",
     "    filename = '../Results/' + storageName\n",
+    "    i = 0\n",
     "    with open(filename, 'w') as w:\n",
     "        for train_index, test_index in sss:\n",
+    "            i += 1\n",
     "            _PREDICTS = []  # Y_test: _LABELS\n",
     "            X_train, X_test = X[train_index], X[test_index]\n",
     "            Y_train, Y_test = Y[train_index], Y[test_index]\n",
@@ -14017,7 +14019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1696,
+   "execution_count": 1701,
    "metadata": {},
    "outputs": [
     {
@@ -14026,17 +14028,155 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "    class 0       0.71      0.89      0.79        45\n",
-      "    class 1       0.85      0.64      0.73        45\n",
+      "    class 0       0.78      0.84      0.81       750\n",
+      "    class 1       0.83      0.77      0.80       750\n",
       "\n",
-      "avg / total       0.78      0.77      0.76        90\n",
+      "avg / total       0.80      0.80      0.80      1500\n",
       "\n",
-      "Accuracy:  0.77\n"
+      "Avg. accuracy:  0.8\n",
+      "CPU times: user 14.5 s, sys: 836 ms, total: 15.4 s\n",
+      "Wall time: 18.4 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "getRandomForestPerformance(debugStandardBaseD1Scores, debugStandardGroupD1Scores, 'debugStandardD1-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1702,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.79      0.81      0.80       750\n",
+      "    class 1       0.80      0.79      0.79       750\n",
+      "\n",
+      "avg / total       0.80      0.80      0.80      1500\n",
+      "\n",
+      "Avg. accuracy:  0.8\n",
+      "CPU times: user 12.2 s, sys: 724 ms, total: 12.9 s\n",
+      "Wall time: 17 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "getRandomForestPerformance(debugStandardBaseD2Scores, debugStandardGroupD2Scores, 'debugStandardD2-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1703,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.80      0.84      0.82       750\n",
+      "    class 1       0.83      0.79      0.81       750\n",
+      "\n",
+      "avg / total       0.82      0.82      0.82      1500\n",
+      "\n",
+      "Avg. accuracy:  0.82\n",
+      "CPU times: user 13.5 s, sys: 796 ms, total: 14.3 s\n",
+      "Wall time: 18 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "getRandomForestPerformance(debugStandardBaseD3Scores, debugStandardGroupD3Scores, 'debugStandardD3-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1714,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.76      0.80      0.78       750\n",
+      "    class 1       0.79      0.75      0.77       750\n",
+      "\n",
+      "avg / total       0.78      0.78      0.78      1500\n",
+      "\n",
+      "Avg. accuracy:  0.78\n",
+      "CPU times: user 13.6 s, sys: 700 ms, total: 14.3 s\n",
+      "Wall time: 18.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "getRandomForestPerformance(onlyVoiceBaseD1Scores, onlyVoiceGroupD1Scores, 'OnlyVoiceD1-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1715,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.77      0.76      0.77       750\n",
+      "    class 1       0.76      0.78      0.77       750\n",
+      "\n",
+      "avg / total       0.77      0.77      0.77      1500\n",
+      "\n",
+      "Avg. accuracy:  0.77\n",
+      "CPU times: user 13.6 s, sys: 800 ms, total: 14.4 s\n",
+      "Wall time: 18.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "getRandomForestPerformance(onlyVoiceBaseD2Scores, onlyVoiceGroupD2Scores, 'OnlyVoiceD2-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1726,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.79      0.80      0.79       750\n",
+      "    class 1       0.80      0.79      0.79       750\n",
+      "\n",
+      "avg / total       0.79      0.79      0.79      1500\n",
+      "\n",
+      "Avg. accuracy:  0.79\n",
+      "CPU times: user 13.3 s, sys: 868 ms, total: 14.1 s\n",
+      "Wall time: 17.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "getRandomForestPerformance(onlyVoiceBaseD3Scores, onlyVoiceGroupD3Scores, 'OnlyVoiceD3-50')"
    ]
   },
   {
