rerun some models

--- a/1_preprocessing/sound.ipynb
+++ b/1_preprocessing/sound.ipynb
@@ -14018,6 +14018,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Standard "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1701,
    "metadata": {},
@@ -14074,7 +14081,9 @@
   {
    "cell_type": "code",
    "execution_count": 1703,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -14096,6 +14105,13 @@
    "source": [
     "%%time\n",
     "getRandomForestPerformance(debugStandardBaseD3Scores, debugStandardGroupD3Scores, 'debugStandardD3-50')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Voice Only"
    ]
   },
   {
@@ -14180,13 +14196,180 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove Last Phonetic (4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1737,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.80      0.81      0.81       750\n",
+      "    class 1       0.81      0.80      0.80       750\n",
+      "\n",
+      "avg / total       0.80      0.80      0.80      1500\n",
+      "\n",
+      "Avg. accuracy:  0.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseD1RLPScores, groupD1RLPScores, 'RLPD1-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1728,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.80      0.84      0.82       750\n",
+      "    class 1       0.83      0.79      0.81       750\n",
+      "\n",
+      "avg / total       0.81      0.81      0.81      1500\n",
+      "\n",
+      "Avg. accuracy:  0.81\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseD2RLPScores, groupD2RLPScores, 'RLPD2-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1736,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.81      0.85      0.83       750\n",
+      "    class 1       0.84      0.80      0.82       750\n",
+      "\n",
+      "avg / total       0.82      0.82      0.82      1500\n",
+      "\n",
+      "Avg. accuracy:  0.82\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseD3RLPScores, groupD3RLPScores, 'RLPD3-50')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove Last Phonetic (4) Only Voice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1739,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.76      0.76      0.76       750\n",
+      "    class 1       0.76      0.77      0.76       750\n",
+      "\n",
+      "avg / total       0.76      0.76      0.76      1500\n",
+      "\n",
+      "Avg. accuracy:  0.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseOnlyVoiceD1RLPScores, groupOnlyVoiceD1RLPScores, 'OnlyVoiceRLPD1-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1740,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.77      0.78      0.78       750\n",
+      "    class 1       0.78      0.77      0.77       750\n",
+      "\n",
+      "avg / total       0.78      0.78      0.78      1500\n",
+      "\n",
+      "Avg. accuracy:  0.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseOnlyVoiceD2RLPScores, groupOnlyVoiceD2RLPScores, 'OnlyVoiceRLPD2-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1741,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.74      0.77      0.76       750\n",
+      "    class 1       0.76      0.73      0.74       750\n",
+      "\n",
+      "avg / total       0.75      0.75      0.75      1500\n",
+      "\n",
+      "Avg. accuracy:  0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseOnlyVoiceD3RLPScores, groupOnlyVoiceD3RLPScores, 'OnlyVoiceRLPD3-50')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove Last Phonetic (All Not Vowel)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "getRandomForestPerformance(baseD1RLPV2Scores, groupD1RLPV2Scores, 'RLPD3-50')"
+   ]
   }
  ],
  "metadata": {
