--- a/1_preprocessing/pattern_of_life.ipynb
+++ b/1_preprocessing/pattern_of_life.ipynb
@@ -1989,6 +1989,219 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 445,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 446,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getRandomForestPerformance(baseFeatures, groupFeatures, storageName, fold=50):\n",
+    "    \n",
+    "    X = np.array(baseFeatures + groupFeatures)\n",
+    "    Y = np.array([0] * len(baseFeatures) + [1]*len(groupFeatures), dtype=int)\n",
+    "    sss = StratifiedShuffleSplit(Y, fold, random_state=randint(0,65536))\n",
+    "    classifier  = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
+    "    target_names = ['class 0', 'class 1']\n",
+    "    TOTAL_LABELS = []\n",
+    "    TOTAL_PREDICTS = []\n",
+    "    \n",
+    "    filename = '../Results/' + storageName\n",
+    "    i = 0\n",
+    "    with open(filename, 'w') as w:\n",
+    "        for train_index, test_index in sss:\n",
+    "            i += 1\n",
+    "            _PREDICTS = []  # Y_test: _LABELS\n",
+    "            X_train, X_test = X[train_index], X[test_index]\n",
+    "            Y_train, Y_test = Y[train_index], Y[test_index]\n",
+    "            classifier = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
+    "            classifier.fit(X_train, Y_train)\n",
+    "            _PREDICTS = classifier.predict(X_test)\n",
+    "            \n",
+    "            TOTAL_LABELS.extend(Y_test)\n",
+    "            TOTAL_PREDICTS.extend(_PREDICTS)\n",
+    "            \n",
+    "            accuracy = round(accuracy_score(Y_test, _PREDICTS), 2)\n",
+    "            crp = classification_report(Y_test, _PREDICTS, target_names=target_names, digits=4)\n",
+    "            #print(crp)\n",
+    "            crp_pure = [ele for ele in crp.split('\\n')[3].split(' ') if ele != '']\n",
+    "            w.write('***{}***\\n{}\\n{}\\n{}\\n{}\\t{}\\t{}\\t{}\\n'.format(i, test_index, Y_test, _PREDICTS, accuracy, crp_pure[2], crp_pure[3], crp_pure[4]))\n",
+    "    \n",
+    "    print(classification_report(TOTAL_LABELS, TOTAL_PREDICTS, target_names=target_names, digits=4))\n",
+    "    print('Avg. accuracy: ', round(accuracy_score(TOTAL_LABELS, TOTAL_PREDICTS), 4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PoL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 447,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0     0.9764    0.9933    0.9848       750\n",
+      "    class 1     0.9932    0.9760    0.9845       750\n",
+      "\n",
+      "avg / total     0.9848    0.9847    0.9847      1500\n",
+      "\n",
+      "Avg. accuracy:  0.9847\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseD1PoL, groupD1PoL, 'PoLD1-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 462,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0     0.9725    0.9893    0.9808       750\n",
+      "    class 1     0.9891    0.9720    0.9805       750\n",
+      "\n",
+      "avg / total     0.9808    0.9807    0.9807      1500\n",
+      "\n",
+      "Avg. accuracy:  0.9807\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseD2PoL, groupD2PoL, 'PoLD2-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 468,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0     0.9842    0.9987    0.9914       750\n",
+      "    class 1     0.9986    0.9840    0.9913       750\n",
+      "\n",
+      "avg / total     0.9914    0.9913    0.9913      1500\n",
+      "\n",
+      "Avg. accuracy:  0.9913\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseD3PoL, groupD3PoL, 'PoLD3-50')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PoLUE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 455,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0     0.9764    0.9947    0.9855       750\n",
+      "    class 1     0.9946    0.9760    0.9852       750\n",
+      "\n",
+      "avg / total     0.9855    0.9853    0.9853      1500\n",
+      "\n",
+      "Avg. accuracy:  0.9853\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseD1PoLAndSound, groupD1PoLAndSound, 'PoLUED1-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 467,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0     0.9815    0.9920    0.9867       750\n",
+      "    class 1     0.9919    0.9813    0.9866       750\n",
+      "\n",
+      "avg / total     0.9867    0.9867    0.9867      1500\n",
+      "\n",
+      "Avg. accuracy:  0.9867\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseD2PoLAndSound, groupD2PoLAndSound, 'PoLUED2-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 469,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0     0.9921    0.9987    0.9953       750\n",
+      "    class 1     0.9987    0.9920    0.9953       750\n",
+      "\n",
+      "avg / total     0.9954    0.9953    0.9953      1500\n",
+      "\n",
+      "Avg. accuracy:  0.9953\n"
+     ]
+    }
+   ],
+   "source": [
+    "getRandomForestPerformance(baseD3PoLAndSound, groupD3PoLAndSound, 'PoLUED3-50')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
